--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="https://www.svgrepo.com/show/87024/sms.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>OTP Request</title>
 </head>
